fix: made some smaller improvements
