# docs/swagger.json
@@ -115,7 +115,7 @@
                 }
             }
         },
-        "/api/v1/auth/email/verify/{token}": {
+        "/api/v1/auth/email/verify": {
             "post": {
                 "security": [
                     {
@@ -135,11 +135,13 @@
                 "summary": "Verifies the email of the authenticated user",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Token",
-                        "name": "token",
-                        "in": "path",
-                        "required": true
+                        "description": "Verify Email Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_router_api_v1_auth.VerifyEmailRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -370,7 +372,7 @@
                 }
             }
         },
-        "/api/v1/auth/password/reset/{token}": {
+        "/api/v1/auth/password/reset": {
             "post": {
                 "security": [
                     {
@@ -389,13 +391,6 @@
                 ],
                 "summary": "Reset a user's password",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Token",
-                        "name": "token",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "description": "Reset Password Request",
                         "name": "request",
@@ -2574,6 +2569,9 @@
                 "created_at": {
                     "type": "string"
                 },
+                "deleted_at": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -2882,7 +2880,10 @@
         "internal_router_api_v1_auth.ResetPasswordRequest": {
             "type": "object",
             "properties": {
-                "password": {
+                "new_password": {
+                    "type": "string"
+                },
+                "token": {
                     "type": "string"
                 }
             }
@@ -2911,6 +2912,14 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_router_api_v1_auth.VerifyEmailRequest": {
+            "type": "object",
+            "properties": {
+                "token": {
                     "type": "string"
                 }
             }
